--- a/maxonts/src/style.css
+++ b/maxonts/src/style.css
@@ -3,6 +3,17 @@ main {
   padding: 0px;
 }
 
+.search {
+  display: flex;
+  /* align-items: center; */
+  align-items: flex-end;
+}
+.search > * {
+  min-width: max-content;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
 .mock_sidebar {
   width: min-content;
   visibility: hidden;
