--- a/maxonts/src/style.css
+++ b/maxonts/src/style.css
@@ -116,6 +116,14 @@ a{
   flex-flow: row;
   align-items: justify;
 }
+
+
+/* .login_page {
+  width: 100%;
+  height: 100%;
+  background-color: #F0E122;
+} */
+
 label{
   display: flex;
   flex-flow: column;
