--- a/maxonts/src/style.css
+++ b/maxonts/src/style.css
@@ -96,6 +96,7 @@ a{
 }
 .sidebar_container{
   align-items: center;
+  top: 50%;
   background-color:#3D3F44;
   margin: 0.3rem;
   min-width: fit-content;
@@ -104,6 +105,7 @@ a{
 .sidebar_container > * {
   width: 100%;
   margin: 8px;
+
 }
 
 .login.container {
